# CortexAI

./: .dockerignore  .env.example  .gitignore  AWS_CONSOLE_GUIDE.md  Dockerfile  Dockerfile.lambda  Dockerfile.lambda.django  Dockerfile.lambda.full  Dockerfile.lambda.simple  ERROR_ANALYSIS_REPORT.md  LOCAL_SETUP.md  QUICK_START.md  README.md  build-lambda-docker.sh  check_env.py  check_langgraph.py  check_langgraph_modules.py  check_versions.py  conversations.db-shm  conversations.db-wal  debug_transaction.py  deploy-lambda-complete.md  docker-compose.yml  dockertest.txt  example.py  example_cloud_function.py  example_postgresql.py  example_simple_backend.py  jet2holiday.md  lambda_handler.py  lambda_handler_django.py  lambda_pooler_test.py  manual_pooler_test.py  manualtest2.txt  manualtestlogs.txt  nig.txt  paxin.txt  procidertestsresults.md  pyproject.toml  requirements-lambda.txt  (+22 more)
.github/workflows/: auto-rebase.yml
cortex/: __init__.py  responses.py
cortex/core/: __init__.py  state.py
cortex/models/: __init__.py  registry.py
cortex/responses/: __init__.py  api.py  llm.py  mock_llm.py  persistence.py  server.py  state.py
cortex/responses/methods/: create.py  retrieve.py
cortex/utils/: __init__.py  llm.py
data/: PROJECT_OVERVIEW.md  checkpointers.md  coheredocs.md  e2.md  llms_langchain_docs.md  openai_assistants_api.md  openai_responses_api.md  plan1.md  plan2.md  responses_api_notes_2.md  responses_note_1.md  saiyaara.md  sample_codes.md
demos/: README.md
demos/chat_ui/: index.html
demos/cli/: cortex_cli.py
scripts/: README.md  SCRIPTS_SUMMARY.md  edit_env.py  env_template.txt  example_conversation.py  example_local.py  example_web_server.py  setup_api_keys.sh  setup_local.sh  smoke_sse.sh  validate_database.py
tests/: conftest.py  diagnose_checkpoint_issue.py  test_checkpoint_bug_fix.py  test_checkpoint_comprehensive.py  test_checkpoint_comprehensive_local.py  test_checkpoint_fix_validation.py  test_checkpoint_isolation.py  test_core_functionality.py  test_database_validation.py  test_db_url_parameter.py  test_django_e2e_scenario.py  test_edge_cases.py  test_multi_provider.py  test_multi_provider_enhanced.py  test_openai_compatibility.py  test_persistence_comprehensive.py  test_persistence_diagnosis.py  test_postgres_docker.py  test_provider_postgres.py  test_provider_sqlite.py  test_provider_supabase.py  test_real_api_integration.py  test_serverless_scenarios.py  test_sqlite_local.py  test_supabase_direct.py
