[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex"
version = "0.1.0"
description = "Open-source alternative to OpenAI Assistants & Responses APIs using LangGraph"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.1.0",
    "langchain-cohere>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cortex"
Documentation = "https://cortex.readthedocs.io"
Repository = "https://github.com/yourusername/cortex"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex*"]
exclude = ["data*", "ignored*", "test*"]