[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex"
version = "0.1.0"
description = "Open-source alternative to OpenAI Assistants & Responses APIs using LangGraph"
authors = [{name = "Fakhar ul mursaleen", email = "fakharmursaleen12345@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core LangGraph dependencies
    "langgraph==0.6.2",
    "langgraph-checkpoint==2.1.1",
    "langgraph-checkpoint-postgres==2.0.23",
    "langgraph-checkpoint-sqlite==2.0.11",
    "langchain-core==0.3.72",
    
    # LLM providers
    "langchain-openai==0.3.28",
    "langchain-google-genai==2.1.9",
    "langchain-anthropic==0.3.18",
    "langchain-cohere==0.4.2",
    "cohere==5.13.11",
    
    # Database
    "psycopg-binary==3.2.9",
    "SQLAlchemy==2.0.42",
    
    # Core dependencies
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "httpx==0.28.1",
    "typing-extensions==4.14.1",
    "numpy==1.26.4",
]

[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.0.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cortex"
Documentation = "https://cortex.readthedocs.io"
Repository = "https://github.com/yourusername/cortex"

[tool.setuptools.packages.find]
where = ["."]
include = ["cortex*"]
exclude = ["tests*", "docs*", "data*"]